# idlib

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  LICENSE  LICENSE.md  README.md  appveyor.yml  idlib.sln
buildsystem/: detect_compiler_and_platform.cmake  set_project_default_properties.cmake
documentation/: building-under-linux-clang.md  building-under-linux-gcc.md  building-under-os-x-clang.md  building-under-windows-10-cygwin.md  building-under-windows-10-visual-studio-community-2017.md  building-under-windows-11-visual-studio-community-2022.md
documentation/building-under-windows-10-cygwin/: how-to-install-a-more-recent-cmake-version-on-cygwin.md  how-to-install-a-more-recent-gcc-version-on-cygwin.md
idlib-chrono/: CMakeLists.txt
idlib-color/: CMakeLists.txt
idlib-color/tests/: CMakeLists.txt
idlib-color/tests/idlib/tests/color/: addition_subtraction.cpp  brightening_darkening.cpp  color_generator.hpp  compose_construction.cpp  copy_construction.cpp  decompose_construction.cpp  interpolation.cpp  inversion.cpp
idlib-document/: CMakeLists.txt
idlib-document/tests/: CMakeLists.txt
idlib-document/tests/idlib/tests/document/: document-erase.cpp  document-insert.cpp  document-prepend-max-length.cpp  document-set-max-length.cpp  utilities.cpp  utilities.hpp
idlib-filesystem/: CMakeLists.txt
idlib-filesystem/tests/: CMakeLists.txt
idlib-filesystem/tests/idlib/tests/file_system/: extension.cpp
idlib-filesystem/tests/idlib/tests/filesystem/: access_mode.cpp  directory_iterator.cpp  working_directory.cpp
idlib-hll/: CMakeLists.txt
idlib-hll/tests/: CMakeLists.txt
idlib-hll/tests/idlib/tests/hll/: qualified_name.cpp
idlib-math/: CMakeLists.txt
idlib-math-geometry/: CMakeLists.txt
idlib-math-geometry/tests/: CMakeLists.txt
idlib-math-geometry/tests/idlib/tests/math-geometry/: enclose.cpp  is_enclosing.cpp  is_intersecting.cpp  translate.cpp  utilities.hpp
idlib-math/tests/: CMakeLists.txt
idlib-math/tests/idlib/tests/arithmetic/: binary_minus_1d.cpp  binary_minus_2d.cpp  binary_minus_empty_1d.cpp  binary_minus_empty_2d.cpp  binary_plus_1d.cpp  binary_plus_2d.cpp  binary_plus_empty_1d.cpp  binary_plus_empty_2d.cpp  binary_slash_1d.cpp  binary_slash_2d.cpp  binary_slash_empty_1d.cpp  binary_slash_empty_2d.cpp  binary_star_1d.cpp  binary_star_2d.cpp  binary_star_empty_1d.cpp  binary_star_empty_2d.cpp  constructor_2d.cpp  random_1d.cpp  random_2d.cpp  random_empty_1d.cpp  random_empty_2d.cpp  trace_2d.cpp  transpose_2d.cpp  transpose_empty_2d.cpp  unary_minus_1d.cpp  unary_minus_2d.cpp  unary_minus_empty_1d.cpp  unary_minus_empty_2d.cpp  unary_plus_1d.cpp  unary_plus_2d.cpp  unary_plus_empty_1d.cpp  unary_plus_empty_2d.cpp
idlib-math/tests/idlib/tests/math/: constants.cpp  interpolate_linear.cpp  is_acute_angle.cpp  math.cpp  max_element.cpp  min_element.cpp  one.cpp  zero.cpp
idlib-numeric/: CMakeLists.txt
idlib-parsing-expression/: CMakeLists.txt
idlib-parsing-expression/tests/: CMakeLists.txt
idlib-parsing-expression/tests/idlib/tests/parsing_expression/: any_sym.cpp  difference.cpp  footer.in  header.in  name.cpp  ordered_choice.cpp  qualified_name.cpp  repetition.cpp  sequence.cpp  symbols.cpp
idlib-signal/: CMakeLists.txt
idlib-signal/tests/: CMakeLists.txt
idlib-signal/tests/idlib/tests/: signal.cpp
idlib-type/: CMakeLists.txt
tests/: CMakeLists.txt
tests/idlib/tests/: compilation.cpp  math.cpp  prefix.cpp  signal.cpp  suffix.cpp  to_lower.cpp  to_upper.cpp
tests/idlib/tests/arithmetic/: binary_minus_1d.cpp  binary_minus_2d.cpp  binary_minus_empty_1d.cpp  binary_minus_empty_2d.cpp  binary_plus_1d.cpp  binary_plus_2d.cpp  binary_plus_empty_1d.cpp  binary_plus_empty_2d.cpp  binary_slash_1d.cpp  binary_slash_2d.cpp  binary_slash_empty_1d.cpp  binary_slash_empty_2d.cpp  binary_star_1d.cpp  binary_star_2d.cpp  binary_star_empty_1d.cpp  binary_star_empty_2d.cpp  constructor_2d.cpp  random_1d.cpp  random_2d.cpp  random_empty_1d.cpp  random_empty_2d.cpp  trace_2d.cpp  transpose_2d.cpp  transpose_empty_2d.cpp  unary_minus_1d.cpp  unary_minus_2d.cpp  unary_minus_empty_1d.cpp  unary_minus_empty_2d.cpp  unary_plus_1d.cpp  unary_plus_2d.cpp  unary_plus_empty_1d.cpp  unary_plus_empty_2d.cpp
tests/idlib/tests/color/: addition_subtraction.cpp  brightening_darkening.cpp  color_generator.hpp  compose_construction.cpp  copy_construction.cpp  decompose_construction.cpp  interpolation.cpp  inversion.cpp
tests/idlib/tests/file_system/: access_mode.cpp  directory_iterator.cpp  extension.cpp  working_directory.cpp
tests/idlib/tests/iterator/: footer.in  header.in  transform_iterator.cpp
tests/idlib/tests/language/: qualified_name.cpp
tests/idlib/tests/math/: arithmetic_array_1d.cpp  arithmetic_array_2d.cpp  arithmetic_tuple.cpp  constants.cpp  empty_arithmetic_array_1d.cpp  empty_arithmetic_array_2d.cpp  interpolate_linear.cpp  max_element.cpp  min_element.cpp  norm.cpp  point_3f.cpp  translate.cpp  vector_3f.cpp
tests/idlib/tests/math/matrix/: constructor.cpp  determinant.cpp  inverse.cpp  matrix-matrix-addition.cpp  matrix-matrix-subtraction.cpp  matrix-scalar-multiplication.cpp  trace.cpp  transpose.cpp
tests/idlib/tests/math/point/: point-vector-subtraction.cpp  point-vector_addition.cpp  zero_point.cpp
tests/idlib/tests/math/transform/: scaling_matrix.cpp  translate_geometry.cpp  translation_matrix.cpp
tests/idlib/tests/math/vector/: euclidean_norm.cpp  manhattan_norm.cpp  maximum_norm.cpp  one_vector.cpp  squared_euclidean_norm.cpp  vector-equality.cpp  vector-scalar_division.cpp  vector-scalar_multiplication.cpp  vector-vector_addition.cpp  vector-vector_subtraction.cpp  vector_negation.cpp  zero_vector.cpp
tests/idlib/tests/parsing_expressions/: any_sym.cpp  difference.cpp  name.cpp  ordered_choice.cpp  qualified_name.cpp  repetition.cpp  sequence.cpp  symbols.cpp
tests/idlib/tests/singleton/: singleton_construction.cpp  singleton_default_construction.cpp  singleton_subtype_construction.cpp  singleton_subtype_default_construction.cpp
tests/idlib/tests/text/: parser.cpp
(+36 files in other folders)
